fix anchor link alignment

--- a/src/components/AnchorLinks/anchor-links.scss
+++ b/src/components/AnchorLinks/anchor-links.scss
@@ -60,7 +60,7 @@
     position: absolute;
     left: auto;
     right: -1.27rem;
-    bottom: 2rem;
+    bottom: rem(40px);
     width: 25%;
     padding: 0;
   }
